--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0303.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0303.md
@@ -9,17 +9,17 @@ parent: 'Exercise 03: Implement contextual grounding'
 
 ## Introduction
 
-Implementing vector search capabilities in the Contoso Suites UI will allow customer service representatives to use natural language queries to be used to find maintenance requests. This functionality relies on the ability of vector search to find items based on data characteristics instead of exact matches on a specific property field. In the prior task, you vectorized maintenance request content that combined the name of the hotel with the details of the request, which will allow searching for requests at a specific hotel or across various properties.
+Implementing vector search capabilities in the Contoso Suites UI will allow customer service representatives to use natural language queries to find maintenance requests. This functionality relies on vector search's ability to find items based on data characteristics instead of exact matches on a specific property field. In the prior task, you vectorized maintenance request content that combined the hotel's name with the request details, allowing searching for requests at a specific hotel or across various properties.
 
 ## Description
 
-In the previous task, you added vector embeddings to property maintenance request data stored in Azure Cosmos DB for NoSQL and then performed a vector search using query embeddings stored in a file. To perform vector searches, it is necessary to create embeddings for incoming query text, so in this task, you will integrate vector search capabilities into the Contoso Suites Customer Information System (CIS) application, leveraging a vectorization API endpoint in the Contoso Suites Web API to create embeddings for the query being performed. The API will be used to vectorize incoming questions from the UI, so they can be used in queries executing the `VectorDistance()` function.
+In the previous task, you added vector embeddings to property maintenance request data stored in Azure Cosmos DB for NoSQL and then performed a vector search using query embeddings stored in a file. It is necessary to create embeddings for incoming query text to perform vector searches, so in this task, you will integrate vector search capabilities into the Contoso Suites Customer Information System (CIS) application, leveraging a vectorization API endpoint in the Contoso Suites Web API to create embeddings for the query being performed. The API will vectorize incoming questions from the UI, which can be used in queries executing the `VectorDistance()` function.
 
 The key tasks are as follows:
 
-1. Add a new .NET user secret called `CosmosDB:ConnectionString`. The value of this should be your Cosmos DB connection string. Add another user secret called `AzureOpenAI:EmbeddingDeploymentName`, which should take on a value of `text-embedding-ada-002`.
+1. Add a new .NET user secret called `CosmosDB:ConnectionString`. This value should be your Cosmos DB connection string. Add another user secret called `AzureOpenAI:EmbeddingDeploymentName`, which should take on a value of `text-embedding-ada-002`.
 2. Generate query text embeddings using the `/Vectorize` endpoint of the ContosoSuitesWebAPI.
-3. Provide a method named `ExecuteVectorSearch` in the `VectorizationService` for executing a vector search query against Azure Cosmos DB. The method should accept vectorized query text (named `queryVector`), the maximum number of results to return (named `max_results`), and the minimum similarity score (named `minimum_similarity_score`) and execute a query using the `VectorDistance()` function. It should return a list of `VectorSearchResult` objects. The count should limit the number of results returned. The query executed in Cosmos DB should use the following pattern:
+3. Provide a method named `ExecuteVectorSearch` in the `VectorizationService` for executing a vector search query against Azure Cosmos DB. The method should accept vectorized query text (called `queryVector`), the maximum number of results to return (named `max_results`), and the minimum similarity score (named `minimum_similarity_score`) and execute a query using the `VectorDistance()` function. It should return a list of `VectorSearchResult` objects. The count should limit the number of results returned. The query executed in Cosmos DB should use the following pattern:
 
     ```csharp
     var query = $"SELECT c.hotel_id AS HotelId, c.hotel AS Hotel, c.details AS Details, c.source AS Source, VectorDistance(c.request_vector, [{string.Join(",", queryVector)}]) AS SimilarityScore FROM c";
@@ -29,10 +29,10 @@ The key tasks are as follows:
 
 4. Update the `/VectorSearch` route handler in the `Program.cs` file to call the `ExecuteVectorSearch` method on the `VectorizationService` and return the results.
 5. Implement vector search capabilities to the UI and submit the following queries for maintenance requests:
-    - Set the search query to "Show me rooms where the air conditioning unit is malfunctioning" and enter 10 as the max result count and select a minimum similarity score of 0.80.
-    - Execute the same query a second time, this time setting the minimum similarity score to 0.82 and observe how that setting can be used to reduce the number of irrelevant results.
-    - Search for "Rooms at the Oceanview Inn where there are air conditioning issues" and enter 5 as the maximum number of results to return and set the minimum similarity score slider to 0.85.
-    - Find for any fire safety requests using the search query, "Are there any requests pertaining to fire and safety equipment at any hotels?" Set the max results to 10.
+   - Set the search query to "Show me rooms where the air conditioning unit is malfunctioning," enter ten as the max result count and select a minimum similarity score of 0.80.
+   - Execute the same query a second time, this time setting the minimum similarity score to 0.82, and observe how that setting can be used to reduce the number of irrelevant results.
+   - Search for "Rooms at the Oceanview Inn where there are air conditioning issues, " enter five as the maximum number of results to return and set the minimum similarity score slider to 0.85.
+   - Finally, find fire safety requests using the search query, "Are there any requests about fire and safety equipment at any hotels?" Set the max results to 10.
 
 ## Success Criteria
 
@@ -40,11 +40,11 @@ The key tasks are as follows:
 - You have updated the `VectorizationService` and its interface to include an `ExecuteVectorSearch(float[] queryVector, int count = 0)` method that returns `List<VectorSearchResult>>`.
 - You have added a `/VectorSearch` endpoint to the API.
 - You have tested the `/VectorSearch` endpoint using the Swagger UI by passing in vector embeddings generated by the `/Vectorize` endpoint.
-- You have successfully added the ability to perform vector searches to the UI and submitted queries..
+- You have successfully added the ability to perform vector searches to the UI and submitted queries.
 
 ## Tips
 
-- If the ContosoSuitesWebAPI .NET application build is failing when you try to run `dotnet run` and you receive an error that the build cannot load the required packages from NuGet, you may be missing a link to the Microsoft NuGet repository. Run the command `dotnet nuget list source` and see if you have an entry enabled for nuget.org. If not, you can add it with the following command: `dotnet nuget add source https://api.nuget.org/v3/index.json -n nuget.org`. If you have one but it is currently disabled, you can enable it with the command `dotnet nuget enable source nuget.org`.
+- If the ContosoSuitesWebAPI .NET application build is failing when you try to run `dotnet run` and you receive an error that the build cannot load the required packages from NuGet, you may be missing a link to the Microsoft NuGet repository. Run the command `dotnet nuget list source` and see if you have an entry enabled for nuget.org. If not, add it with the following command: `dotnet nuget add source https://api.nuget.org/v3/index.json -n nuget.org`. If you have one but it is currently disabled, you can enable it with the command `dotnet nuget enable source nuget.org`.
 
 ## Learning Resources
 
@@ -81,7 +81,7 @@ The key tasks are as follows:
     {: .note }
     > If you are using a GitHub Codespaces instance, open the website in a browser and navigate to the **/swagger** URL.
 
-  - On the Swagger UI page, expand the `/Vectorize` endpoint block.
+  - Expand the `/Vectorize` endpoint block on the Swagger UI page.
 
     ![The Swagger UI page is displayed with the expand button for the Vectorize endpoint highlighted.](../../media/Solution/0303-web-api-swagger-ui.png)
 
@@ -94,7 +94,7 @@ The key tasks are as follows:
     ![In the Vectorize block, the text block is highlighted with the query text above entered and the execute button is highlighted.](../../media/Solution/0303-web-api-swagger-vectorize-execute.png)
 
   - Observe the **Response body** returned. The response contains an array of floating point values representing the query text. This array contains 1536 dimensions.
-  - Copy the entire response body, include the opening and closing square brackets.
+  - Copy the entire response body, including the opening and closing square brackets.
 
     ![The Response body block for the vectorization request is highlighted.](../../media/Solution/0303-web-api-swagger-vectorize-response-body.png)
 
@@ -110,7 +110,7 @@ The key tasks are as follows:
 
   - Replace the `<QUERY_VECTOR>` token in the query with the vector output you copied from the API response body.
   - Select **Execute Query** on the toolbar and observe the output in the **Results** panel.
-  - In Visual Studio Code, stop the API project by selecting the teminal window where it is runnig and pressing CTRL+C.
+  - In Visual Studio Code, stop the API project by selecting the terminal window where it is running and pressing CTRL+C.
 
 - To provide a method in the `VectorizationService` and an API endpoint for executing a vector search query against Azure Cosmos DB:
   - In Visual Studio Code, open the `IVectorizationService.cs` file in the `src\ContosoSuitesWebAPI` folder and complete `Exercise 3 Task 3 TODO #1` by uncommenting the interface definition for the `ExecuteVectorSearch` method.
@@ -124,7 +124,7 @@ The key tasks are as follows:
     return results;
     ```
 
-  - Return to the the terminal prompt and enter the following command again to start the API locally:
+  - Return to the terminal prompt and enter the following command again to start the API locally:
 
     ```bash
     dotnet run
@@ -132,7 +132,7 @@ The key tasks are as follows:
 
   - Once the API has started, test the `/VectorSearch` endpoint by opening a web browser and navigating to the [Swagger UI page for the API](http://localhost:5292/swagger/).
   - On the Swagger UI page, use the `/Vectorize` endpoint to generate embeddings for the query text "rooms where the air conditioning is not working", as you did previously.
-  - Copy the entire response body, include the opening and closing square brackets.
+  - Copy the entire response body, including the opening and closing square brackets.
   - Expand the `/VectorSearch` endpoint block and select **Try it out**.
   - Enter "5" into the `max_results` parameter box.
   - Enter "0.5" into the `minimum_similarity_score` parameter box.
@@ -184,10 +184,10 @@ The key tasks are as follows:
 
   - Leave the Web API running for the next step.
 
-- To add vector search capabilities to the UI, open the file `src\ContosoSuitesDashboard\pages\3_Vector_Search.py`. The code will run as-is, but will not have knowledge of how to vectorize query text or perform vector searches. The support vector search capabilities, make the following changes to the Python script.
+- To add vector search capabilities to the UI, open the file `src\ContosoSuitesDashboard\pages\3_Vector_Search.py`. The code will run as-is, but will not have knowledge of how to vectorize query text or perform vector searches. To support vector search capabilities, make the following changes to the Python script.
   - In the `if query:` block of the Submit button code in the `main()` function:
     - Vectorize the search query text by completing `Exercise 3 Task 3 TODO #4`. Send the search query text to the `handle_query_vectorization()` method and set the results to a variable.
-    - Perform a vector search by completing `Exercise 3 Task 3 TODO #5`. Pass the vectorized search query, along with the desired number of results to the `handle_vector_search()` function.
+    - Perform a vector search by completing `Exercise 3 Task 3 TODO #5`. Pass the vectorized search query, along with the desired number of results, to the `handle_vector_search()` function.
     - Display the results in a table by completing `Exercise 3 Task 3 TODO #6`. Use the `st.table()` method and provide the JSON value from the search results.
     - The completed code for the `if st.button("Submit")` block should look like the following:
 
@@ -210,7 +210,7 @@ The key tasks are as follows:
       ```
 
       {: .note }
-      > Python code is sensitive to indentation and formatting, so pay close attention to indentation if you are copying and pasting the above code into the `3_Vector_Search.py` file.
+      > Python code is sensitive to indentation and formatting, so pay close attention to indentation if copying and pasting the above code into the `3_Vector_Search.py` file.
 
   - Test your completed code by opening a new terminal window in Visual Studio Code, navigating to the `src\ContosoSuitesDashboard` folder, and running the following command to start the Streamlit dashboard:
 
@@ -219,9 +219,9 @@ The key tasks are as follows:
     ```
 
 - Navigate to the **Vector Search** page using the left-hand menu in the browser windows that opens, and then submit the following queries for maintenance requests and observe the results:
-  - Set the search query to "Show me rooms where the air conditioning unit is malfunctioning" and enter 10 as the max result count and select a minimum similarity score of 0.80.
-  - Execute the same query a second time, this time setting the minimum similarity score to 0.82 and observe how that setting can be used to reduce the number of irrelevant results.
-  - Search for "Rooms at the Oceanview Inn where there are air conditioning issues" and enter 5 as the maximum number of results to return and set the minimum similarity score slider to 0.85.
-  - Find for any fire safety requests using the search query, "Are there any requests pertaining to fire and safety equipment at any hotels?" Set the max results to 10.
+  - Set the search query to "Show me rooms where the air conditioning unit is malfunctioning," enter ten as the max result count and select a minimum similarity score of 0.80.
+  - Execute the same query a second time, this time setting the minimum similarity score to 0.82, and observe how that setting can be used to reduce the number of irrelevant results.
+  - Search for "Rooms at the Oceanview Inn where there are air conditioning issues, " enter five as the maximum number of results to return and set the minimum similarity score slider to 0.85.
+  - Find fire safety requests using the search query, "Are there any requests about fire and safety equipment at any hotels?" Set the max results to 10.
 
 </details>
